styled header section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container container__adaptive">
+      <div class="container">
         <div class="header__content">
           <a href="./index.html" class="logo"
             >Web<span class="logo--black">Studio</span></a
@@ -32,26 +32,28 @@
             >
             <a href="#" class="header__nav--inactive">Kontakt</a>
           </nav>
-          <a
-            class="header__contact header__contact--margin"
-            href="mailto:info@devstudio.com"
-          >
-            <div class="header__icon header__icon--mail">
-              <svg width="16 " height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>
-            </div>
+          <div class="header__contact-wrapper">
+            <a
+              class="header__contact header__contact--margin"
+              href="mailto:info@devstudio.com"
+            >
+              <div class="header__icon header__icon--mail">
+                <svg width="16 " height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </div>
 
-            info@devstudio.com</a
-          >
-          <a class="header__contact" href="tel:+48111111111">
-            <div class="header__icon">
-              <svg width="10 " height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>
-            </div>
-            <span class="header__contact"> +48 111 111 111</span></a
-          >
+              info@devstudio.com</a
+            >
+            <a class="header__contact" href="tel:+48111111111">
+              <div class="header__icon">
+                <svg width="10 " height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+              </div>
+              <span class="header__contact"> +48 111 111 111</span></a
+            >
+          </div>
         </div>
       </div>
     </header>
