keep on goin'...

--- a/index.html
+++ b/index.html
@@ -69,19 +69,17 @@
       </div>
     </header>
     <main>
-      <section class="banner">
-        <div class="container">
-          <!-- <div class="banner__container"> -->
+      <section>
+        <div class="container banner">
           <h1 class="banner__header">
-            Efektywne rozwiązania dla Waszego biznesu
+            Efektywne&nbsp;rozwiązania dla Waszego&nbsp;biznesu
           </h1>
           <button type="button" class="button button__banner" data-modal-open>
             Zamów usługę
           </button>
-          <!-- </div> -->
         </div>
-      </section>
-      <section class="section">
+        </section>
+        <!-- <section class="section">
         <div class="container">
           <ul class="main-article">
             <li>
@@ -490,7 +488,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
