--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           </button>
         </div>
         </section>
-        <!-- <section class="section">
+        <section class="section">
         <div class="container">
           <ul class="main-article">
-            <li>
+            <li class="main-article__item">
               <article>
                 <div class="main-article__image">
                   <svg width="70 " height="70" class="main-article__svg">
@@ -96,7 +96,7 @@
                 </p>
               </article>
             </li>
-            <li>
+            <li class="main-article__item">
               <article>
                 <div class="main-article__image">
                   <svg width="70 " height="70" class="main-article__svg">
@@ -110,7 +110,7 @@
                 </p>
               </article>
             </li>
-            <li>
+            <li class="main-article__item">
               <article>
                 <div class="main-article__image">
                   <svg width="70 " height="70" class="main-article__svg">
@@ -124,7 +124,7 @@
                 </p>
               </article>
             </li>
-            <li>
+            <li class="main-article__item">
               <article>
                 <div class="main-article__image">
                   <svg width="70 " height="70" class="main-article__svg">
@@ -141,7 +141,7 @@
           </ul>
         </div>
       </section>
-      <section class="services">
+      <!-- <section class="services">
         <div class="container">
           <div>
             <h2 class="services__header">Czym się zajmujemy</h2>
