--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             Zamów usługę
           </button>
         </div>
-        </section>
-        <section class="section">
+      </section>
+      <section class="section">
         <div class="container">
           <ul class="main-article">
             <li class="main-article__item">
@@ -141,7 +141,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="services">
+      <section class="services">
         <div class="container">
           <div>
             <h2 class="services__header">Czym się zajmujemy</h2>
@@ -416,7 +416,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div>
