--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="container banner">
+      <section class="banner">
+        <div class="container">
           <h1 class="banner__header">
             Efektywne&nbsp;rozwiązania dla Waszego&nbsp;biznesu
           </h1>
@@ -177,11 +177,11 @@
           </div>
         </div>
       </section>
-      <section class="team section">
+      <section class="team">
         <div class="container">
-          <h2>Nasz zespół</h2>
+          <h2 class="team__section-header">Nasz zespół</h2>
           <ul class="team__list">
-            <li>
+            <li class="team__item">
               <figure class="team__member">
                 <img
                   src="./images/home/zespol1.jpg"
@@ -226,7 +226,7 @@
                 </ul>
               </figure>
             </li>
-            <li>
+            <li class="team__item">
               <figure class="team__member">
                 <img
                   src="./images/home/zespol2.jpg"
@@ -271,7 +271,7 @@
                 </ul>
               </figure>
             </li>
-            <li>
+            <li class="team__item">
               <figure class="team__member">
                 <img
                   src="./images/home/zespol3.jpg"
@@ -316,7 +316,7 @@
                 </ul>
               </figure>
             </li>
-            <li>
+            <li class="team__item">
               <figure class="team__member">
                 <img
                   src="./images/home/zespol4.jpg"
@@ -416,7 +416,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div>
@@ -488,7 +488,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
