--- a/index.html
+++ b/index.html
@@ -371,42 +371,42 @@
             <ul class="clients__list">
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-3"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-4"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-5"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients__item">
                 <a href="#"
-                  ><svg width="170" height="92">
+                  ><svg width="106" height="60" class="clients__icon">
                     <use href="./images/icons.svg#icon-Client-6"></use>
                   </svg>
                 </a>
@@ -416,7 +416,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div>
@@ -488,7 +488,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
