--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="banner">
         <div class="container">
           <h1 class="banner__header">
-            Efektywne&nbsp;rozwiązania dla Waszego&nbsp;biznesu
+            Efektywne rozwiązania dla Waszego biznesu
           </h1>
           <button type="button" class="button button__banner" data-modal-open>
             Zamów usługę
@@ -141,7 +141,7 @@
           </ul>
         </div>
       </section>
-      <section class="services">
+      <!-- <section class="services">
         <div class="container">
           <div>
             <h2 class="services__header">Czym się zajmujemy</h2>
@@ -416,7 +416,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__content">
           <div>
