--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 />
 
                 <source
-                  media="(max-width: 767px)"
+                  media="(min-width: 480px)"
                   srcset="./images/home/zespol2_s@1x.jpg 1x, ./images/home/zespol2_s@2x.jpg 2x"
                   type="image/jpg"
                 />
