--- a/index.html
+++ b/index.html
@@ -182,28 +182,41 @@
           <h2 class="team__section-header">Nasz zespół</h2>
           <ul class="team__list">
             <li class="team__item">
-              <figure class="team__member">             
-               <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/home/zespol1_l@1x.jpg 1x, ./images/home/zespol1_l@2x.jpg 2x"
-                  type="image/jpg"
-                />
+              <figure class="team__member">
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/home/zespol1_l@1x.jpg 1x,
+                      ./images/home/zespol1_l@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 768px)"
-                  srcset="./images/home/zespol1_m@1x.jpg 1x, ./images/home/zespol1_m@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/home/zespol1_m@1x.jpg 1x,
+                      ./images/home/zespol1_m@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/home/zespol1_s@1x.jpg 1x, ./images/home/zespol1_s@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/home/zespol1_s@1x.jpg 1x,
+                      ./images/home/zespol1_s@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <img class="team__image" src="./images/home/zespol1.jpg" alt="team member picture" />
-              </picture>
+                  <img
+                    class="team__image"
+                    src="./images/home/zespol1.jpg"
+                    alt="team member picture"
+                  />
+                </picture>
                 <figcaption class="team__description">
                   <h3 class="team__header">John Doe</h3>
                   <p class="team__paragraph">Product Designer</p>
@@ -243,26 +256,39 @@
             <li class="team__item">
               <figure class="team__member">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/home/zespol2_l@1x.jpg 1x, ./images/home/zespol2_l@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/home/zespol2_l@1x.jpg 1x,
+                      ./images/home/zespol2_l@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 768px)"
-                  srcset="./images/home/zespol2_m@1x.jpg 1x, ./images/home/zespol2_m@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/home/zespol2_m@1x.jpg 1x,
+                      ./images/home/zespol2_m@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/home/zespol2_s@1x.jpg 1x, ./images/home/zespol2_s@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/home/zespol2_s@1x.jpg 1x,
+                      ./images/home/zespol2_s@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <img class="team__image" src="./images/home/zespol2.jpg" alt="team member picture" />
-              </picture>
+                  <img
+                    class="team__image"
+                    src="./images/home/zespol2.jpg"
+                    alt="team member picture"
+                  />
+                </picture>
                 <figcaption class="team__description">
                   <h3 class="team__header">John Doe</h3>
                   Frontend Developer
@@ -302,26 +328,39 @@
             <li class="team__item">
               <figure class="team__member">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/home/zespol3_l@1x.jpg 1x, ./images/home/zespol3_l@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/home/zespol3_l@1x.jpg 1x,
+                      ./images/home/zespol3_l@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 768px)"
-                  srcset="./images/home/zespol3_m@1x.jpg 1x, ./images/home/zespol3_m@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/home/zespol3_m@1x.jpg 1x,
+                      ./images/home/zespol3_m@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/home/zespol3_s@1x.jpg 1x, ./images/home/zespol3_s@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/home/zespol3_s@1x.jpg 1x,
+                      ./images/home/zespol3_s@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <img class="team__image" src="./images/home/zespol3.jpg" alt="team member picture" />
-              </picture>
+                  <img
+                    class="team__image"
+                    src="./images/home/zespol3.jpg"
+                    alt="team member picture"
+                  />
+                </picture>
                 <figcaption class="team__description">
                   <h3 class="team__header">John Doe</h3>
                   Marketing
@@ -361,26 +400,39 @@
             <li class="team__item">
               <figure class="team__member">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/home/zespol4_l@1x.jpg 1x, ./images/home/zespol4_l@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/home/zespol4_l@1x.jpg 1x,
+                      ./images/home/zespol4_l@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 768px)"
-                  srcset="./images/home/zespol4_m@1x.jpg 1x, ./images/home/zespol4_m@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/home/zespol4_m@1x.jpg 1x,
+                      ./images/home/zespol4_m@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <source
-                  media="(min-width: 480px)"
-                  srcset="./images/home/zespol4_s@1x.jpg 1x, ./images/home/zespol4_s@2x.jpg 2x"
-                  type="image/jpg"
-                />
+                  <source
+                    media="(min-width: 480px)"
+                    srcset="
+                      ./images/home/zespol4_s@1x.jpg 1x,
+                      ./images/home/zespol4_s@2x.jpg 2x
+                    "
+                    type="image/jpg"
+                  />
 
-                <img class="team__image" src="./images/home/zespol4.jpg" alt="team member picture" />
-              </picture>
+                  <img
+                    class="team__image"
+                    src="./images/home/zespol4.jpg"
+                    alt="team member picture"
+                  />
+                </picture>
                 <figcaption class="team__description">
                   <h3 class="team__header">John Doe</h3>
                   UI Designer
@@ -420,7 +472,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section>
+      <section>
         <div class="container">
           <div class="clients">
             <h2>Nasi klienci</h2>
@@ -475,8 +527,8 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__content">
-          <div>
-            <a href="./index.html" class="logo"
+          <div class="footer__contact-block">
+            <a href="./index.html" class="footer-logo"
               >Web<span class="logo--white">Studio</span></a
             >
             <address class="footer__address">
@@ -544,7 +596,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
