--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 </svg>
               </span>
 
-              <p>
+              <p class="modal__terms-paragraph">
                 Oświadczam iż akceptuję
                 <a class="modal__terms--link" href="#">Regulamin</a>
                 i
