--- a/index.html
+++ b/index.html
@@ -609,17 +609,13 @@
           <div class="modal__wrapper">
             <label class="input__container"
               ><div class="input__description">Imię</div>
-              <input type="name" name="name-input" class="modal__input" /><svg
-                height="18"
-                width="18"
-                class="modal__icon modal__icon--name"
-              >
+              <svg height="18" width="18" class="modal__icon modal__icon--name">
                 <use href="./images/icons.svg#icon-name-input"></use>
               </svg>
+              <input type="name" name="name-input" class="modal__input" />
             </label>
             <label class="input__container"
               ><div class="input__description">Telefon</div>
-              <input type="tel" name="telephone-number" class="modal__input" />
 
               <svg
                 height="18"
@@ -628,6 +624,7 @@
               >
                 <use href="./images/icons.svg#icon-phone-number-input"></use>
               </svg>
+              <input type="tel" name="telephone-number" class="modal__input" />
             </label>
 
             <label class="input__container">
