mobile-menu finished

--- a/portfolio.html
+++ b/portfolio.html
@@ -418,6 +418,93 @@
       </div>
     </footer>
 
+    <div class="mobile-menu nodisplay">
+      <svg class="mobile-menu__icon-close" width="40px" height="40px">
+        <use href="./images/icons.svg#icon-close_40px"></use>
+      </svg>
+
+      <ul class="mobile-menu__nav-list">
+        <li class="mobile-menu__nav-item">
+          <a
+            href="./index.html"
+            class="mobile-menu__nav-link mobile-menu__nav-link--inactive"
+            >Agencja</a
+          >
+        </li>
+        <li class="mobile-menu__nav-item">
+          <a
+            href="./portfolio.html"
+            class="mobile-menu__nav-link mobile-menu__nav-link--active"
+            >Portfolio</a
+          >
+        </li>
+        <li class="mobile-menu__nav-item">
+          <a
+            href="#"
+            class="mobile-menu__nav-link mobile-menu__nav-link--inactive"
+            >Kontakt</a
+          >
+        </li>
+      </ul>
+
+      <ul class="mobile-menu__list-contact">
+        <li class="mobile-menu__list-contact-tel">
+          <a class="mobile-menu__link-contact-tel" href="tel:+380961111111"
+            >+48 111 111 111</a
+          >
+        </li>
+        <li class="mobile-menu__list-contact-mail">
+          <a
+            class="mobile-menu__link-contact-mail"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-menu__list-social">
+        <li class="mobile-menu__item-social">
+          <a
+            class="mobile-menu__link-social"
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="instagram"
+            >Instagram</a
+          >
+        </li>
+        <li class="mobile-menu__item-social">
+          <a
+            class="mobile-menu__link-social"
+            href="https://twitter.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="twitter"
+            >Twitter</a
+          >
+        </li>
+        <li class="mobile-menu__item-social">
+          <a
+            class="mobile-menu__link-social"
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="facebook"
+            >Facebook</a
+          >
+        </li>
+        <li class="mobile-menu__item-social">
+          <a
+            class="mobile-menu__link-social"
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="nofollow noopener noreferrer"
+            aria-label="linkedin"
+            >LinkedIn</a
+          >
+        </li>
+      </ul>
+    </div>
+
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
