--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                     class="team__image"
                     src="./images/home/zespol1.jpg"
                     alt="team member picture"
+                    srcset="./images/home/zespol1_l@2x.jpg 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
@@ -286,6 +287,7 @@
                     class="team__image"
                     src="./images/home/zespol2.jpg"
                     alt="team member picture"
+                    srcset="./image/home/zespol2_l@2x 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
@@ -358,6 +360,7 @@
                     class="team__image"
                     src="./images/home/zespol3.jpg"
                     alt="team member picture"
+                    srcset="./image/home/zespol3_l@2x 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
@@ -430,6 +433,7 @@
                     class="team__image"
                     src="./images/home/zespol4.jpg"
                     alt="team member picture"
+                    srcset="./image/home/zespol4_l@2x 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
