--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     class="team__image"
                     src="./images/home/zespol2.jpg"
                     alt="team member picture"
-                    srcset="./image/home/zespol2_l@2x 2x"
+                    srcset="./images/home/zespol2_l@2x.jpg 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
@@ -360,7 +360,7 @@
                     class="team__image"
                     src="./images/home/zespol3.jpg"
                     alt="team member picture"
-                    srcset="./image/home/zespol3_l@2x 2x"
+                    srcset="./images/home/zespol3_l@2x.jpg 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
@@ -433,7 +433,7 @@
                     class="team__image"
                     src="./images/home/zespol4.jpg"
                     alt="team member picture"
-                    srcset="./image/home/zespol4_l@2x 2x"
+                    srcset="./images/home/zespol4_l@2x.jpg 2x"
                   />
                 </picture>
                 <figcaption class="team__description">
